# Mongo

./: README.md  consumer.py  consumer_email.py  consumer_sms.py  dotenv  dotenv-0.0.5-py3-none-any.whl  main.py  producer.py  producer_email.py  producer_sms.py  pyproject.toml  read.me
Learn/: config.ini  connect.py  main0.py  seeds.py
database/: connect.py  search.py  seeds.py
