[tool.poetry]
name = "mongo"
version = "0.1.0"
description = ""
authors = ["OleksaSolo <9095945@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.6.0"}
mongoengine = "^0.27.0"
faker = "^20.0.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
pika = "^1.3.2"
redis = "^5.0.1"
celery = "^5.3.5"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
